--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- HERO -->
   <section id="home" class="relative min-h-[100svh] flex items-center px-4 sm:px-8 md:px-20 pt-24">
-    <img src="../images/Background.jpg" alt="Blackmatter Hero"
+    <img src="./images/Background.jpg" alt="Blackmatter Hero"
          class="absolute inset-0 w-full h-full object-cover opacity-30" />
     <div class="relative z-10 max-w-2xl">
       <h2 class="text-4xl sm:text-5xl md:text-7xl font-extrabold text-white leading-tight mb-4 sm:mb-6 drop-shadow-lg">
@@ -188,7 +188,7 @@
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
         <div class="relative p-4">
           <div class="overflow-hidden rounded-xl">
-            <img src="../images/Background.jpg" alt="Custom Logo"
+            <img src="./images/Background.jpg" alt="Custom Logo"
                  class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
           </div>
           <p class="mt-4 text-center font-medium text-gray-200">Custom Logo</p>
@@ -202,7 +202,7 @@
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
         <div class="relative p-4">
           <div class="overflow-hidden rounded-xl">
-            <img src="../images/logo.png" alt="Accessories"
+            <img src="./images/logo.png" alt="Accessories"
                  class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
           </div>
           <p class="mt-4 text-center font-medium text-gray-200">Accessories</p>
@@ -216,7 +216,7 @@
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
         <div class="relative p-4">
           <div class="overflow-hidden rounded-xl">
-            <img src="../images/logo2.jpg" alt="Outfit"
+            <img src="./images/logo2.jpg" alt="Outfit"
                  class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
           </div>
           <p class="mt-4 text-center font-medium text-gray-200">Outfit</p>
@@ -244,7 +244,7 @@
         <!-- Left: Blackmatter card -->
         <div class="rounded-3xl border border-white/10 bg-white/[0.04] backdrop-blur-xl overflow-hidden">
           <div class="relative h-56">
-            <img src="../images/Background.jpg" class="absolute inset-0 w-full h-full object-cover opacity-80" alt="Blackmatter">
+            <img src="./images/Background.jpg" class="absolute inset-0 w-full h-full object-cover opacity-80" alt="Blackmatter">
             <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
           </div>
           <div class="p-6">
@@ -261,7 +261,7 @@
         <div class="rounded-3xl border border-white/10 bg-white/[0.06] backdrop-blur-xl overflow-hidden">
           <div class="relative h-56">
             <!-- jika ada mock putih khusus, ganti gambar ini -->
-            <img src="../images/gal.jpg" class="absolute inset-0 w-full h-full object-contain bg-white" alt="graffiello_v">
+            <img src="./images/gal.jpg" class="absolute inset-0 w-full h-full object-contain bg-white" alt="graffiello_v">
             <div class="absolute inset-0 bg-gradient-to-t from-black/10 to-transparent"></div>
           </div>
           <div class="p-6">
@@ -279,10 +279,10 @@
       <div class="mt-6 rounded-3xl border border-white/10 bg-black/40 backdrop-blur-xl p-5">
         <div class="grid grid-cols-2 gap-4">
           <div class="rounded-xl overflow-hidden border border-white/10 bg-white/[0.03]">
-            <img src="../images/foto-profile-hero.jpg" class="w-full h-40 object-cover" alt="Black preview">
+            <img src="./images/foto-profile-hero.jpg" class="w-full h-40 object-cover" alt="Black preview">
           </div>
           <div class="rounded-xl overflow-hidden border border-white/10 bg-white">
-            <img src="../images/logo2.jpg" class="w-full h-40 object-cover" alt="White preview">
+            <img src="./images/logo2.jpg" class="w-full h-40 object-cover" alt="White preview">
           </div>
         </div>
         <p class="mt-3 text-xs text-gray-400 text-center">
@@ -300,19 +300,19 @@
     <div class="flex justify-center gap-10">
       <a href="https://www.instagram.com/blackmttr?igsh=ODdpbHIxY3dkbWlh" target="_blank" rel="noopener noreferrer"
          class="group flex flex-col items-center gap-2 hover:opacity-80 transition">
-        <img src="../images/instagram.png" alt="Instagram" class="h-12 w-12 object-contain">
+        <img src="./images/instagram.png" alt="Instagram" class="h-12 w-12 object-contain">
         <span class="text-white font-normal tracking-wide">@blackmttr</span>
       </a>
 
       <a href="https://www.tiktok.com/@_itsgal?_t=ZS-8z9YayUtc37&_r=1" target="_blank" rel="noopener noreferrer"
          class="group flex flex-col items-center gap-1 hover:opacity-80 transition">
-        <img src="../images/tiktok.png" alt="TikTok" class="h-12 w-12 object-contain mx-auto">
+        <img src="./images/tiktok.png" alt="TikTok" class="h-12 w-12 object-contain mx-auto">
         <span class="text-white font-normal tracking-wide">@_itsgal</span>
       </a>
 
       <a href="https://www.behance.net/g632" target="_blank" rel="noopener noreferrer"
          class="group flex flex-col items-center gap-2 hover:opacity-80 transition">
-        <img src="../images/behance.png" alt="Behance" class="h-12 w-12 object-contain">
+        <img src="./images/behance.png" alt="Behance" class="h-12 w-12 object-contain">
         <span class="text-white font-normal tracking-wide">/g632</span>
       </a>
     </div>
@@ -328,32 +328,32 @@
     <!-- GRID: TANPA BACKGROUND/BORDER, LOGO UKURAN SEDANG -->
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-y-10 sm:gap-y-12 gap-x-6 sm:gap-x-10 place-items-center">
       <a href="https://www.instagram.com/cuanity.co?igsh=MWI0Mjk2cHo0eGdjbw==/sponsor1" target="_blank" rel="noopener" class="group">
-        <img src="../images/cuanity.png"
-             onerror="this.onerror=null;this.src='../images/cuanity.jpg?v=2';"
+        <img src="./images/cuanity.png"
+             onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';"
              alt="Sponsor 1"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener" class="group">
-        <img src="../images/whoimmal.png"
+        <img src="./images/whoimmal.png"
              alt="Sponsor 2"
              class="h-10 sm:h-7 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener" class="group">
-        <img src="../images/sponsors/logo-3.png"
+        <img src="./images/sponsors/logo-3.png"
              alt="Sponsor 3"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/sponsor4" target="_blank" rel="noopener" class="group">
-        <img src="../images/sponsors/logo-4.png"
+        <img src="./images/sponsors/logo-4.png"
              alt="Sponsor 4"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/sponsor5" target="_blank" rel="noopener" class="group">
-        <img src="../images/sponsors/logo-5.png"
+        <img src="./images/sponsors/logo-5.png"
              alt="Sponsor 5"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
@@ -363,18 +363,18 @@
     <div class="mt-12 hidden md:block">
       <div class="relative overflow-hidden">
         <div class="marquee flex items-center gap-16 p-2">
-          <img src="../images/cuanity.png" onerror="this.onerror=null;this.src='../images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/whoimmal.png" alt="Sponsor 2" class="h-7 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/cuanity.png" onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/whoimmal.png" alt="Sponsor 2" class="h-7 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
 
           <!-- duplikasi untuk loop mulus -->
-          <img src="../images/cuanity.png" onerror="this.onerror=null;this.src='../images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-2.png" alt="Sponsor 2" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="../images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/cuanity.png" onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/sponsors/logo-2.png" alt="Sponsor 2" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
         </div>
       </div>
     </div>
@@ -439,5 +439,6 @@
   </script>
 </body>
 </html>
+
 
 
