--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- HERO -->
   <section id="home" class="relative min-h-[100svh] flex items-center px-4 sm:px-8 md:px-20 pt-24">
-    <img src="./images/Background.jpg" alt="Blackmatter Hero"
+    <img src="images/Background.jpg" alt="Blackmatter Hero"
          class="absolute inset-0 w-full h-full object-cover opacity-30" />
     <div class="relative z-10 max-w-2xl">
       <h2 class="text-4xl sm:text-5xl md:text-7xl font-extrabold text-white leading-tight mb-4 sm:mb-6 drop-shadow-lg">
@@ -439,6 +439,7 @@
   </script>
 </body>
 </html>
+
 
 
 
