--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
         <div class="relative p-4">
           <div class="overflow-hidden rounded-xl">
-            <img src="./images/logo.png" alt="Accessories"
+            <img src="./images/modern.png" alt="Accessories"
                  class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
           </div>
           <p class="mt-4 text-center font-medium text-gray-200">Accessories</p>
@@ -341,7 +341,7 @@
       </a>
 
       <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener" class="group">
-        <img src="./images/sponsors/logo-3.png"
+        <img src="./images/logo_hd.png"
              alt="Sponsor 3"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
@@ -439,6 +439,7 @@
   </script>
 </body>
 </html>
+
 
 
 
