--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
-      <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener" class="group">
+      <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="group">
         <img src="./images/whoimmal.png"
              alt="Sponsor 2"
              class="h-10 sm:h-7 object-contain opacity-80 group-hover:opacity-100 transition" />
@@ -342,6 +342,7 @@
 
       <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener" class="group">
         <img src="./images/logo_hd.png"
+          onerror="this.onerror=null;this.src='./images/logo_hd.jpg?v=2';"
              alt="Sponsor 3"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
@@ -439,6 +440,7 @@
   </script>
 </body>
 </html>
+
 
 
 
