--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
       </a>
 
       <a href="https://www.instagram.com/sponsor4" target="_blank" rel="noopener" class="group">
-        <img src="./images/sponsors/logo-4.png"
+        <img src="./images/galsp.png"
+           onerror="this.onerror=null;this.src='./images/galsp.jpg?v=2';"
              alt="Sponsor 4"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
@@ -440,6 +441,7 @@
   </script>
 </body>
 </html>
+
 
 
 
