--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
         <div class="relative p-4">
           <div class="overflow-hidden rounded-xl">
-            <img src="./images/modern.png" alt="Accessories"
+            <img src="./images/modern.jpg" alt="Accessories"
                  class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
           </div>
           <p class="mt-4 text-center font-medium text-gray-200">Accessories</p>
@@ -441,6 +441,7 @@
   </script>
 </body>
 </html>
+
 
 
 
