--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="bg-black text-gray-200 font-sans">
 
-  <!-- Navbar -->
+  <!-- NAVBAR -->
   <nav class="sticky top-0 z-50 bg-black/40 backdrop-blur-xl border-b border-white/10">
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <a href="#home" class="flex items-center">
@@ -56,7 +57,7 @@
     </div>
   </nav>
 
-  <!-- Hero -->
+  <!-- HERO -->
   <section id="home" class="relative min-h-[100svh] flex items-center px-6 md:px-20 pt-24">
     <img src="images/Background.jpg" alt="Hero" class="absolute inset-0 w-full h-full object-cover opacity-30" />
     <div class="relative z-10 max-w-2xl">
@@ -72,12 +73,101 @@
     </div>
   </section>
 
-  <!-- Other Sections -->
-  <!-- (Profile, Archive, Collab, Contact, Sponsors) -->
-  <!-- … kamu bisa paste kembali bagian section lainnya dari kode sebelumnya tanpa ubah -->
-  
+  <!-- PROFILE -->
+  <section id="profile" class="relative bg-black text-gray-300">
+    <div class="pointer-events-none absolute inset-0">
+      <div class="absolute inset-0 bg-[radial-gradient(1100px_520px_at_50%_-8%,rgba(255,255,255,0.12),transparent_60%)]"></div>
+      <div class="absolute inset-0 blur-2xl opacity-70 bg-[conic-gradient(from_210deg_at_60%_40%,rgba(255,255,255,0.06),transparent_20%,rgba(255,255,255,0.10),transparent_60%)]"></div>
+    </div>
+
+    <div class="relative max-w-7xl mx-auto px-6 pt-16 pb-10 grid grid-cols-1 lg:grid-cols-2 gap-10 items-center">
+      <div class="rounded-3xl bg-white/[0.04] backdrop-blur-xl border border-white/10 p-6">
+        <p class="uppercase tracking-widest text-[11px] text-gray-300/90">Hi There!</p>
+        <h1 class="mt-2 text-4xl sm:text-5xl font-extrabold text-white">
+          I am <span class="text-white/90">Developer</span>
+        </h1>
+        <p class="mt-4 text-gray-400 text-lg">I make the complex simple.</p>
+
+        <a href="#contact"
+           class="inline-block mt-6 px-5 py-2 rounded-md bg-white text-black font-semibold hover:bg-white/90 transition">
+          Contact Me
+        </a>
+
+        <div class="mt-10 grid grid-cols-1 sm:grid-cols-3 gap-4">
+          <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
+            <p class="text-xs text-gray-500 uppercase">Email</p>
+            <p class="text-sm text-white truncate">blackmatterrrr@gmail.com</p>
+          </div>
+          <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
+            <p class="text-xs text-gray-500 uppercase">Phone</p>
+            <p class="text-sm text-white">+62-8xx-xxxx-xxxx</p>
+          </div>
+          <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
+            <p class="text-xs text-gray-500 uppercase">Location</p>
+            <p class="text-sm text-white">Yogyakarta, ID</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="relative rounded-3xl overflow-hidden bg-white/[0.04] backdrop-blur-xl border border-white/10">
+        <div class="absolute -inset-4 rounded-3xl bg-gradient-to-br from-white/10 to-transparent blur-2xl"></div>
+        <img src="./images/Background.jpg"
+             alt="Profile"
+             class="relative w-full h-[420px] object-cover" />
+      </div>
+    </div>
+  </section>
+
+  <!-- THE ARCHIVE -->
+  <section id="the-archive" class="py-16 sm:py-20 md:py-24 px-4 sm:px-6 md:px-12 bg-gradient-to-b from-black to-gray-900">
+    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">The Archive</h2>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+      <a href="custom-logo.html" class="group card-archive">
+        <img src="./images/Background.jpg" class="card-img" alt="Custom Logo">
+        <p class="card-title">Custom Logo</p>
+      </a>
+      <a href="accesories.html" class="group card-archive">
+        <img src="./images/modern.jpg" class="card-img" alt="Accessories">
+        <p class="card-title">Accessories</p>
+      </a>
+      <a href="outfit.html" class="group card-archive">
+        <img src="./images/logo2.jpg" class="card-img" alt="Outfit">
+        <p class="card-title">Outfit</p>
+      </a>
+    </div>
+  </section>
+
+  <!-- COLLAB -->
+  <section id="collab" class="relative py-20 px-6 md:px-12">
+    <div class="pointer-events-none absolute inset-0 bg-gradient-to-b from-black via-[#0b0b13] to-black"></div>
+    <div class="relative max-w-6xl mx-auto text-center">
+      <h2 class="text-4xl font-bold mb-12"><span class="text-white">BTR</span> × <span class="text-white">갈</span></h2>
+      <p class="text-gray-400 mb-10">Two visual identities merged into one universe.</p>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="py-12 bg-gradient-to-b from-gray-900 to-black text-center">
+    <h2 class="text-2xl font-bold mb-2">Contact</h2>
+    <p class="text-gray-400 mb-6">Temukan saya di platform berikut:</p>
+
+    <div class="flex justify-center gap-10">
+      <a href="https://www.instagram.com/blackmttr" target="_blank" class="social">
+        <img src="./images/instagram.png" alt="Instagram" class="h-12 w-12 object-contain">
+        <span>@blackmttr</span>
+      </a>
+      <a href="https://www.tiktok.com/@_itsgal" target="_blank" class="social">
+        <img src="./images/tiktok.png" alt="TikTok" class="h-12 w-12 object-contain">
+        <span>@_itsgal</span>
+      </a>
+      <a href="https://www.behance.net/g632" target="_blank" class="social">
+        <img src="./images/behance.png" alt="Behance" class="h-12 w-12 object-contain">
+        <span>/g632</span>
+      </a>
+    </div>
+  </section>
+
   <script>
-    // Script: toggle mobile menu
     const btn = document.getElementById("menuBtn");
     const panel = document.getElementById("menuPanel");
     const openIcon = document.getElementById("iconOpen");
@@ -91,242 +181,6 @@
   </script>
 </body>
 </html>
-
-<!-- ====================== PROFILE (HERO + ABOUT + SERVICES PREVIEW) ====================== -->
-<section id="profile" class="relative bg-black text-gray-300">
-  <!-- METALLIC BLUR BACKDROP -->
-  <div class="pointer-events-none absolute inset-0">
-    <!-- soft radial glow -->
-    <div class="absolute inset-0 bg-[radial-gradient(1100px_520px_at_50%_-8%,rgba(255,255,255,0.12),transparent_60%)]"></div>
-    <!-- metallic sheen sweep -->
-    <div class="absolute inset-0 blur-2xl opacity-70 bg-[conic-gradient(from_210deg_at_60%_40%,rgba(255,255,255,0.06),transparent_20%,rgba(255,255,255,0.10),transparent_60%)]"></div>
-  </div>
-
-  <!-- HERO -->
-  <div class="relative max-w-7xl mx-auto px-6 pt-16 pb-10 grid grid-cols-1 lg:grid-cols-2 gap-10 items-center">
-    <!-- Left: headline (glass) -->
-    <div class="rounded-3xl bg-white/[0.04] backdrop-blur-xl border border-white/10 p-6">
-      <p class="uppercase tracking-widest text-[11px] text-gray-300/90">Hi There!</p>
-      <h1 class="mt-2 text-4xl sm:text-5xl font-extrabold text-white">
-        I am <span class="text-white/90">Developer</span>
-      </h1>
-      <p class="mt-4 text-gray-400 text-lg">I make the complex simple.</p>
-
-      <a href="#contact"
-         class="inline-block mt-6 px-5 py-2 rounded-md bg-white text-black font-semibold hover:bg-white/90 transition">
-        Contact Me
-      </a>
-
-      <!-- info row -->
-      <div class="mt-10 grid grid-cols-1 sm:grid-cols-3 gap-4">
-        <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
-          <p class="text-xs text-gray-500 uppercase">Email</p>
-          <p class="text-sm text-white truncate">blackmatterrrr@gmail.com</p>
-        </div>
-        <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
-          <p class="text-xs text-gray-500 uppercase">Phone</p>
-          <p class="text-sm text-white">+62-8xx-xxxx-xxxx</p>
-        </div>
-        <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
-          <p class="text-xs text-gray-500 uppercase">Location</p>
-          <p class="text-sm text-white">Yogyakarta, ID</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Right: hero image (glass) -->
-    <div class="relative rounded-3xl overflow-hidden bg-white/[0.04] backdrop-blur-xl border border-white/10">
-      <div class="absolute -inset-4 rounded-3xl bg-gradient-to-br from-white/10 to-transparent blur-2xl"></div>
-      <img src="./images/Background.jpg"
-           alt="Profile"
-           class="relative w-full h-[420px] object-cover" />
-    </div>
-  </div>
-
-  <!-- ABOUT -->
-  <div class="relative border-t border-white/10"></div>
-  <div class="relative max-w-7xl mx-auto px-6 py-14 grid grid-cols-1 lg:grid-cols-[380px,1fr] gap-10">
-    <!-- About image (glass) -->
-    <div class="rounded-3xl overflow-hidden border border-white/10 bg-white/[0.04] backdrop-blur-xl">
-      <img src="./images/itsgal.jpg" alt="About" class="w-full h-full object-cover">
-    </div>
-
-    <!-- About text -->
-    <div>
-      <p class="text-sm tracking-widest text-gray-300/90 uppercase">Who am I?</p>
-      <h3 class="mt-2 text-2xl sm:text-3xl font-extrabold text-white">
-        I'm Galih, a visual Logo Designer and Web Developer
-      </h3>
-      <p class="mt-4 text-gray-400 leading-relaxed">
-        Sejak kecil tertarik pada misteri alam semesta & estetika metal–modern.
-        Saya membangun <span class="text-white font-medium">BLACKMATTER</span> sebagai ruang untuk
-        menuangkan ide menjadi identitas visual yang tajam dan bermakna.
-      </p>
-
-      <!-- facts -->
-      <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4 text-sm">
-        <div class="rounded-xl bg-white/[0.04] backdrop-blur-xl border border-white/10 p-4">
-          <div class="flex items-center justify-between"><span class="text-gray-500">Name</span><span class="text-white">Galih</span></div>
-          <div class="flex items-center justify-between mt-2"><span class="text-gray-500">Age</span><span class="text-white">25</span></div>
-        </div>
-        <div class="rounded-xl bg-white/[0.04] backdrop-blur-xl border border-white/10 p-4">
-          <div class="flex items-center justify-between"><span class="text-gray-500">From</span><span class="text-white">Yogyakarta, ID</span></div>
-          <div class="flex items-center justify-between mt-2"><span class="text-gray-500">Email</span><span class="text-white">blackmatterrrr@gmail.com</span></div>
-        </div>
-      </div>
-
-      <a href="YOUR_CV_LINK.pdf" download
-         class="mt-6 inline-flex items-center gap-2 px-5 py-2 rounded-md bg-white text-black font-semibold hover:bg-white/90 transition">
-        Download CV
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5 5m0 0l5-5m-5 5V4"/></svg>
-      </a>
-    </div>
-  </div>
-</section>
-
-  <!-- THE ARCHIVE -->
-  <section id="the-archive" class="py-16 sm:py-20 md:py-24 px-4 sm:px-6 md:px-12 bg-gradient-to-b from-black to-gray-900">
-    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-center mb-8 sm:mb-12 tracking-wide">
-      The Archive
-    </h2>
-
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-
-      <!-- CARD: Custom Logo -->
-      <a href="custom-logo.html"
-         class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
-        <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
-        <div class="relative p-4">
-          <div class="overflow-hidden rounded-xl">
-            <img src="./images/Background.jpg" alt="Custom Logo"
-                 class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
-          </div>
-          <p class="mt-4 text-center font-medium text-gray-200">Custom Logo</p>
-        </div>
-        <div class="pointer-events-none absolute inset-0 rounded-2xl ring-0 ring-white/0 group-hover:ring-2 group-hover:ring-white/20 transition"></div>
-      </a>
-
-      <!-- CARD: Accessories (contoh) -->
-      <a href="accesories.html"
-         class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
-        <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
-        <div class="relative p-4">
-          <div class="overflow-hidden rounded-xl">
-            <img src="./images/modern.jpg" alt="Accessories"
-                 class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
-          </div>
-          <p class="mt-4 text-center font-medium text-gray-200">Accessories</p>
-        </div>
-        <div class="pointer-events-none absolute inset-0 rounded-2xl ring-0 ring-white/0 group-hover:ring-2 group-hover:ring-white/20 transition"></div>
-      </a>
-
-      <!-- CARD: Outfit (contoh) -->
-      <a href="outfit.html"
-         class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
-        <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
-        <div class="relative p-4">
-          <div class="overflow-hidden rounded-xl">
-            <img src="./images/logo2.jpg" alt="Outfit"
-                 class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
-          </div>
-          <p class="mt-4 text-center font-medium text-gray-200">Outfit</p>
-        </div>
-        <div class="pointer-events-none absolute inset-0 rounded-2xl ring-0 ring-white/0 group-hover:ring-2 group-hover:ring-white/20 transition"></div>
-      </a>
-
-    </div>
-  </section>
-
-  <!-- ====================== COLLAB (GANTI ORDER) ====================== -->
-  <section id="collab" class="relative py-16 sm:py-20 md:py-24 px-4 sm:px-6 md:px-12">
-    <!-- background glow -->
-    <div class="pointer-events-none absolute inset-0 bg-gradient-to-b from-black via-[#0b0b13] to-black"></div>
-    <div class="pointer-events-none absolute -top-40 left-1/2 -translate-x-1/2 w-[1200px] h-[1200px]
-                bg-[radial-gradient(ellipse_at_center,rgba(99,102,241,0.25)_0%,rgba(59,130,246,0.12)_45%,transparent_70%)]
-                blur-3xl"></div>
-
-    <div class="relative max-w-6xl mx-auto">
-      <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold mb-8 sm:mb-12 text-center tracking-wide">
-      <span class="text-white">BTR</span> × <span class="text-white">갈</span>
-      </h2>
-
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-        <!-- Left: Blackmatter card -->
-        <div class="rounded-3xl border border-white/10 bg-white/[0.04] backdrop-blur-xl overflow-hidden">
-          <div class="relative h-56">
-            <img src="./images/Background.jpg" class="absolute inset-0 w-full h-full object-cover opacity-80" alt="Blackmatter">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent"></div>
-          </div>
-          <div class="p-6">
-            <h3 class="text-xl font-extrabold text-white">Blackmatter (BTR)</h3>
-            <p class="mt-2 text-sm text-gray-400">Void aesthetic, glassmorphism, neon glow. Cocok untuk brand yang ingin nuansa misterius & modern.</p>
-            <div class="mt-4 flex gap-3">
-              <a id="collabGoDark"
-                 class="px-4 py-2 rounded-lg bg-white/10 hover:bg-white/20 text-sm cursor-pointer">Explore BTR</a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Right: graffiello_v card -->
-        <div class="rounded-3xl border border-white/10 bg-white/[0.06] backdrop-blur-xl overflow-hidden">
-          <div class="relative h-56">
-            <!-- jika ada mock putih khusus, ganti gambar ini -->
-            <img src="./images/gal.jpg" class="absolute inset-0 w-full h-full object-contain bg-white" alt="graffiello_v">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/10 to-transparent"></div>
-          </div>
-          <div class="p-6">
-            <h3 class="text-xl font-extrabold text-white">graffiello_v (갈)</h3>
-            <p class="mt-2 text-sm text-gray-400">Clean grid, high contrast, airy spacing. Cocok untuk brand yang ingin tampil rapi & presisi.</p>
-            <div class="mt-4 flex gap-3">
-              <a id="collabGoWhite"
-                 class="px-4 py-2 rounded-lg bg-white/10 hover:bg-white/20 text-sm cursor-pointer">Explore 갈</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Split preview mini -->
-      <div class="mt-6 rounded-3xl border border-white/10 bg-black/40 backdrop-blur-xl p-5">
-        <div class="grid grid-cols-2 gap-4">
-          <div class="rounded-xl overflow-hidden border border-white/10 bg-white/[0.03]">
-            <img src="./images/foto-profile-hero.jpg" class="w-full h-40 object-cover" alt="Black preview">
-          </div>
-          <div class="rounded-xl overflow-hidden border border-white/10 bg-white">
-            <img src="./images/logo2.jpg" class="w-full h-40 object-cover" alt="White preview">
-          </div>
-        </div>
-        <p class="mt-3 text-xs text-gray-400 text-center">
-          Dua persona visual — pilih mode di atas untuk masuk ke versi masing-masing.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="py-6 bg-gradient-to-b from-gray-900 to-black text-center">
-    <h2 class="text-2xl font-bold mb-2">Contact</h2>
-    <p class="text-gray-400 mb-6">Temukan saya di platform berikut:</p>
-
-    <div class="flex justify-center gap-10">
-      <a href="https://www.instagram.com/blackmttr?igsh=ODdpbHIxY3dkbWlh" target="_blank" rel="noopener noreferrer"
-         class="group flex flex-col items-center gap-2 hover:opacity-80 transition">
-        <img src="./images/instagram.png" alt="Instagram" class="h-12 w-12 object-contain">
-        <span class="text-white font-normal tracking-wide">@blackmttr</span>
-      </a>
-
-      <a href="https://www.tiktok.com/@_itsgal?_t=ZS-8z9YayUtc37&_r=1" target="_blank" rel="noopener noreferrer"
-         class="group flex flex-col items-center gap-1 hover:opacity-80 transition">
-        <img src="./images/tiktok.png" alt="TikTok" class="h-12 w-12 object-contain mx-auto">
-        <span class="text-white font-normal tracking-wide">@_itsgal</span>
-      </a>
-
-      <a href="https://www.behance.net/g632" target="_blank" rel="noopener noreferrer"
-         class="group flex flex-col items-center gap-2 hover:opacity-80 transition">
-        <img src="./images/behance.png" alt="Behance" class="h-12 w-12 object-contain">
-        <span class="text-white font-normal tracking-wide">/g632</span>
-      </a>
-    </div>
-  </section>
 <!-- ====================== SPONSORS ====================== -->
 <section id="sponsors" class="relative bg-black">
   <div class="relative max-w-7xl mx-auto px-4 py-12 sm:py-16">
@@ -451,4 +305,3 @@
   </script>
 </body>
 </html>
-
