--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-black text-gray-200 font-sans">
@@ -28,46 +25,56 @@
         <li><a href="#home" class="hover:text-white">Home</a></li>
         <li><a href="#profile" class="hover:text-white">Profile</a></li>
         <li><a href="#the-archive" class="hover:text-white">The Archive</a></li>
-        <li><a href="#collab" class="hover:text-white">Collab</a></li>
+        <li><a href="#collabs" class="hover:text-white">Collabs</a></li>
+        <li><a href="#sponsors" class="hover:text-white">Sponsors</a></li>
         <li><a href="#contact" class="hover:text-white">Contact</a></li>
       </ul>
 
-      <button id="menuBtn" class="md:hidden p-2 rounded-md hover:bg-white/10">
+      <!-- Tombol Mobile -->
+      <button id="menuBtn"
+        class="md:hidden inline-flex items-center justify-center rounded-md p-2 hover:bg-white/10 focus:outline-none focus:ring-2 focus:ring-white/30"
+        aria-label="Toggle navigation" aria-expanded="false">
         <svg id="iconOpen" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
-             viewBox="0 0 24 24" stroke="currentColor">
+              viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
                 d="M4 6h16M4 12h16M4 18h16"/>
         </svg>
         <svg id="iconClose" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden" fill="none"
-             viewBox="0 0 24 24" stroke="currentColor">
+              viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
                 d="M6 18L18 6M6 6l12 12"/>
         </svg>
       </button>
     </div>
 
-    <div id="menuPanel" class="md:hidden hidden bg-black/60 backdrop-blur-xl border-t border-white/10">
-      <ul class="space-y-2 text-sm font-medium p-4">
-        <li><a href="#home" class="block px-3 py-2 rounded-lg hover:bg-white/10">Home</a></li>
-        <li><a href="#profile" class="block px-3 py-2 rounded-lg hover:bg-white/10">Profile</a></li>
-        <li><a href="#the-archive" class="block px-3 py-2 rounded-lg hover:bg-white/10">The Archive</a></li>
-        <li><a href="#collab" class="block px-3 py-2 rounded-lg hover:bg-white/10">Collab</a></li>
-        <li><a href="#contact" class="block px-3 py-2 rounded-lg hover:bg-white/10">Contact</a></li>
-      </ul>
+    <!-- Menu Mobile -->
+    <div id="menuPanel" class="md:hidden hidden">
+      <div class="px-4 sm:px-6 pb-4">
+        <ul class="space-y-2 text-sm font-medium bg-black/60 backdrop-blur-xl rounded-xl p-3 border border-white/10">
+          <li><a href="#home" class="block px-3 py-2 rounded-lg hover:bg-white/10">Home</a></li>
+          <li><a href="#profile" class="block px-3 py-2 rounded-lg hover:bg-white/10">Profile</a></li>
+          <li><a href="#the-archive" class="block px-3 py-2 rounded-lg hover:bg-white/10">The Archive</a></li>
+          <li><a href="#collabs" class="block px-3 py-2 rounded-lg hover:bg-white/10">Collabs</a></li>
+          <li><a href="#sponsors" class="block px-3 py-2 rounded-lg hover:bg-white/10">Sponsors</a></li>
+          <li><a href="#contact" class="block px-3 py-2 rounded-lg hover:bg-white/10">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
   <!-- HERO -->
-  <section id="home" class="relative min-h-[100svh] flex items-center px-6 md:px-20 pt-24">
-    <img src="images/Background.jpg" alt="Hero" class="absolute inset-0 w-full h-full object-cover opacity-30" />
+  <section id="home" class="relative min-h-[100svh] flex items-center px-4 sm:px-8 md:px-20 pt-24">
+    <img src="./images/Background.jpg" alt="Blackmatter Hero"
+         class="absolute inset-0 w-full h-full object-cover opacity-30" />
     <div class="relative z-10 max-w-2xl">
-      <h2 class="text-5xl md:text-7xl font-extrabold text-white leading-tight mb-6 drop-shadow-lg">
-        The void <br> speaks through my art
+      <h2 class="text-4xl sm:text-5xl md:text-7xl font-extrabold text-white leading-tight mb-4 sm:mb-6 drop-shadow-lg">
+        The void <br class="hidden sm:block"> speaks through my art
       </h2>
-      <p class="text-gray-300 text-lg mb-8 leading-relaxed">
+      <p class="text-gray-300 text-base sm:text-lg mb-8 leading-relaxed">
         Blackmatter — ruang lahirnya logo, editing, dan seni visual untuk generasi modern.
       </p>
-      <a href="#collab" class="inline-block bg-gradient-to-r from-gray-200 to-white text-black font-semibold px-8 py-3 rounded-full shadow-lg hover:scale-105 transition-all">
+      <a href="#collabs"
+         class="inline-block bg-gradient-to-r from-gray-200 to-white text-black font-semibold px-6 sm:px-8 py-3 rounded-full shadow-lg hover:scale-105 hover:shadow-2xl transition-all duration-300">
         Lihat Kolaborasi
       </a>
     </div>
@@ -77,7 +84,6 @@
   <section id="profile" class="relative bg-black text-gray-300">
     <div class="pointer-events-none absolute inset-0">
       <div class="absolute inset-0 bg-[radial-gradient(1100px_520px_at_50%_-8%,rgba(255,255,255,0.12),transparent_60%)]"></div>
-      <div class="absolute inset-0 blur-2xl opacity-70 bg-[conic-gradient(from_210deg_at_60%_40%,rgba(255,255,255,0.06),transparent_20%,rgba(255,255,255,0.10),transparent_60%)]"></div>
     </div>
 
     <div class="relative max-w-7xl mx-auto px-6 pt-16 pb-10 grid grid-cols-1 lg:grid-cols-2 gap-10 items-center">
@@ -100,7 +106,7 @@
           </div>
           <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
             <p class="text-xs text-gray-500 uppercase">Phone</p>
-            <p class="text-sm text-white">+62-8xx-xxxx-xxxx</p>
+            <p class="text-sm text-white">+62-821-1732-8028</p>
           </div>
           <div class="rounded-xl bg-[#0b0f14] border border-white/10 p-4">
             <p class="text-xs text-gray-500 uppercase">Location</p>
@@ -110,77 +116,103 @@
       </div>
 
       <div class="relative rounded-3xl overflow-hidden bg-white/[0.04] backdrop-blur-xl border border-white/10">
-        <div class="absolute -inset-4 rounded-3xl bg-gradient-to-br from-white/10 to-transparent blur-2xl"></div>
-        <img src="./images/Background.jpg"
-             alt="Profile"
-             class="relative w-full h-[420px] object-cover" />
+        <img src="./images/Background.jpg" alt="Profile" class="relative w-full h-[420px] object-cover" />
+      </div>
+    </div>
+
+    <div class="relative border-t border-white/10"></div>
+    <div class="relative max-w-7xl mx-auto px-6 py-14 grid grid-cols-1 lg:grid-cols-[380px,1fr] gap-10">
+      <div class="rounded-3xl overflow-hidden border border-white/10 bg-white/[0.04] backdrop-blur-xl">
+        <img src="./images/itsgal.jpg" alt="About" class="w-full h-full object-cover">
+      </div>
+      <div>
+        <p class="text-sm tracking-widest text-gray-300/90 uppercase">Who am I?</p>
+        <h3 class="mt-2 text-2xl sm:text-3xl font-extrabold text-white">
+          I'm Gal, a Designer, Traveller, Vlog
+        </h3>
+        <p class="mt-4 text-gray-400 leading-relaxed">
+          Terjebak dalam kehampaan, saya belajar bahwa gelap tak selalu berarti hancur.
+          Kadang, di sanalah jiwa kita terlahir kembali.
+          <span class="text-white font-medium">BLACKMATTER</span> sebagai ruang untuk
+          menuangkan ide menjadi identitas visual yang tajam dan bermakna.
+        </p>
       </div>
     </div>
   </section>
 
   <!-- THE ARCHIVE -->
-  <section id="the-archive" class="py-16 sm:py-20 md:py-24 px-4 sm:px-6 md:px-12 bg-gradient-to-b from-black to-gray-900">
-    <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">The Archive</h2>
+  <section id="the-archive" class="py-16 px-4 sm:px-6 md:px-12 bg-gradient-to-b from-black to-gray-900">
+    <h2 class="text-3xl font-bold text-center mb-10">The Archive</h2>
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-      <a href="custom-logo.html" class="group card-archive">
-        <img src="./images/Background.jpg" class="card-img" alt="Custom Logo">
-        <p class="card-title">Custom Logo</p>
+      <a href="custom-logo.html" class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
+        <img src="./images/Background.jpg" alt="Custom Logo" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
+        <p class="mt-4 text-center font-medium text-gray-200">Custom Logo</p>
       </a>
-      <a href="accesories.html" class="group card-archive">
-        <img src="./images/modern.jpg" class="card-img" alt="Accessories">
-        <p class="card-title">Accessories</p>
+      <a href="accesories.html" class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
+        <img src="./images/modern.jpg" alt="Accessories" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
+        <p class="mt-4 text-center font-medium text-gray-200">Accessories</p>
       </a>
-      <a href="outfit.html" class="group card-archive">
-        <img src="./images/logo2.jpg" class="card-img" alt="Outfit">
-        <p class="card-title">Outfit</p>
+      <a href="outfit.html" class="group relative rounded-2xl border border-white/10 overflow-hidden shadow-lg hover:shadow-2xl transition-all">
+        <img src="./images/logo2.jpg" alt="Outfit" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-500">
+        <p class="mt-4 text-center font-medium text-gray-200">Outfit</p>
       </a>
     </div>
   </section>
 
-  <!-- COLLAB -->
-  <section id="collab" class="relative py-20 px-6 md:px-12">
+  <!-- COLLABS -->
+  <section id="collabs" class="relative py-16 px-4 sm:px-6 md:px-12">
     <div class="pointer-events-none absolute inset-0 bg-gradient-to-b from-black via-[#0b0b13] to-black"></div>
-    <div class="relative max-w-6xl mx-auto text-center">
-      <h2 class="text-4xl font-bold mb-12"><span class="text-white">BTR</span> × <span class="text-white">갈</span></h2>
-      <p class="text-gray-400 mb-10">Two visual identities merged into one universe.</p>
+    <div class="relative max-w-6xl mx-auto">
+      <h2 class="text-3xl font-bold mb-12 text-center">
+        <span class="text-white">BTR</span> × <span class="text-white">갈</span>
+      </h2>
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+        <div class="rounded-3xl border border-white/10 bg-white/[0.04] backdrop-blur-xl overflow-hidden">
+          <img src="./images/Background.jpg" class="w-full h-56 object-cover opacity-80" alt="Blackmatter">
+          <div class="p-6">
+            <h3 class="text-xl font-extrabold text-white">Blackmatter (BTR)</h3>
+            <p class="mt-2 text-sm text-gray-400">Void aesthetic, glassmorphism, neon glow.</p>
+          </div>
+        </div>
+        <div class="rounded-3xl border border-white/10 bg-white/[0.06] backdrop-blur-xl overflow-hidden">
+          <img src="./images/logo.png" class="w-full h-56 object-contain bg-white" alt="graffiello_v">
+          <div class="p-6">
+            <h3 class="text-xl font-extrabold text-white">Graffiello_v (갈)</h3>
+            <p class="mt-2 text-sm text-gray-400">Clean grid, high contrast, airy spacing.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
+  
+ <!-- CONTACT -->
+    <section id="contact" class="relative bg-gradient-to-b from-black via-neutral-900 to-black py-16">
+      <div class="text-center mb-10">
+        <h2 class="text-3xl font-bold text-white">Contact</h2>
+        <p class="text-gray-400 mt-2">Temukan saya di platform berikut:</p>
+      </div>
 
-  <!-- CONTACT -->
-  <section id="contact" class="py-12 bg-gradient-to-b from-gray-900 to-black text-center">
-    <h2 class="text-2xl font-bold mb-2">Contact</h2>
-    <p class="text-gray-400 mb-6">Temukan saya di platform berikut:</p>
-
-    <div class="flex justify-center gap-10">
-      <a href="https://www.instagram.com/blackmttr" target="_blank" class="social">
-        <img src="./images/instagram.png" alt="Instagram" class="h-12 w-12 object-contain">
-        <span>@blackmttr</span>
-      </a>
-      <a href="https://www.tiktok.com/@_itsgal" target="_blank" class="social">
-        <img src="./images/tiktok.png" alt="TikTok" class="h-12 w-12 object-contain">
-        <span>@_itsgal</span>
-      </a>
-      <a href="https://www.behance.net/g632" target="_blank" class="social">
-        <img src="./images/behance.png" alt="Behance" class="h-12 w-12 object-contain">
-        <span>/g632</span>
-      </a>
-    </div>
-  </section>
-
-  <script>
-    const btn = document.getElementById("menuBtn");
-    const panel = document.getElementById("menuPanel");
-    const openIcon = document.getElementById("iconOpen");
-    const closeIcon = document.getElementById("iconClose");
-
-    btn.addEventListener("click", () => {
-      panel.classList.toggle("hidden");
-      openIcon.classList.toggle("hidden");
-      closeIcon.classList.toggle("hidden");
-    });
-  </script>
-</body>
-</html>
+      <div class="flex justify-center gap-12 text-center">
+        <div>
+          <a href="https://instagram.com/blackmttr" target="_blank">
+            <img src="images/instagram.png" alt="Instagram" class="h-10 mx-auto mb-2" />
+            <p>@blackmttr</p>
+          </a>
+        </div>
+        <div>
+          <a href="https://www.tiktok.com/@_itsgal" target="_blank">
+            <img src="images/tiktok.png" alt="TikTok" class="h-10 mx-auto mb-2" />
+            <p>@_itsgal</p>
+          </a>
+        </div>
+        <div>
+          <a href="https://www.behance.net/g632" target="_blank">
+            <img src="images/behance.png" alt="Behance" class="h-10 mx-auto mb-2" />
+            <p>/g632</p>
+          </a>
+        </div>
+      </div>
+    </section>
 <!-- ====================== SPONSORS ====================== -->
 <section id="sponsors" class="relative bg-black">
   <div class="relative max-w-7xl mx-auto px-4 py-12 sm:py-16">
@@ -305,3 +337,4 @@
   </script>
 </body>
 </html>
+
