--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Blackmatter</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="../images/B.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="./images/B.png" type="image/png" sizes="32x32">
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -18,7 +18,7 @@
     <div class="max-w-7xl mx-auto px-4 h-14 flex items-center justify-between">
       <!-- Logo -->
       <a href="#home" class="flex items-center">
-        <img src="../images/logo.png" class="h-9 w-auto" alt="Blackmatter Logo">
+        <img src="./images/logo.png" class="h-9 w-auto" alt="Blackmatter Logo">
       </a>
 
       <!-- Menu Desktop -->
@@ -65,7 +65,7 @@
 
   <!-- HERO -->
   <section id="home" class="relative min-h-[100svh] flex items-center px-4 sm:px-8 md:px-20 pt-24">
-    <img src="../images/Background.jpg" alt="Blackmatter Hero"
+    <img src="./images/Background.jpg" alt="Blackmatter Hero"
          class="absolute inset-0 w-full h-full object-cover opacity-30" />
     <div class="relative z-10 max-w-2xl">
       <h2 class="text-4xl sm:text-5xl md:text-7xl font-extrabold text-white leading-tight mb-4 sm:mb-6 drop-shadow-lg">
@@ -439,3 +439,4 @@
   </script>
 </body>
 </html>
+
