--- a/index.html
+++ b/index.html
@@ -334,14 +334,14 @@
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
-      <a href="https://www.instagram.com/sponsor2" target="_blank" rel="noopener" class="group">
+      <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="group">
         <img src="./images/whoimmal.png"
              alt="Sponsor 2"
              class="h-10 sm:h-7 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
-      <a href="https://www.instagram.com/sponsor3" target="_blank" rel="noopener" class="group">
-        <img src="./images/sponsors/logo-3.png"
+      <a href="https://www.instagram.com/graffiello_v?igsh=dGIyZnV3N3lqYzc4" target="_blank" rel="noopener" class="group">
+        <img src="./images/galsp.png"
              alt="Sponsor 3"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
@@ -439,5 +439,6 @@
   </script>
 </body>
 </html>
+
 
 
