--- a/index.html
+++ b/index.html
@@ -336,24 +336,28 @@
 
       <a href="https://www.instagram.com/whoimmal?igsh=NWxyazA5ajhuYTR4" target="_blank" rel="noopener" class="group">
         <img src="./images/whoimmal.png"
+          onerror="this.onerror=null;this.src='./images/whoimmal.jpg?v=2';"
              alt="Sponsor 2"
              class="h-10 sm:h-7 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/graffiello_v?igsh=dGIyZnV3N3lqYzc4" target="_blank" rel="noopener" class="group">
         <img src="./images/galsp.png"
+          onerror="this.onerror=null;this.src='./images/galsp.jpg?v=2';"
              alt="Sponsor 3"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/sponsor4" target="_blank" rel="noopener" class="group">
         <img src="./images/sponsors/logo-4.png"
+          onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';"
              alt="Sponsor 4"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/sponsor5" target="_blank" rel="noopener" class="group">
         <img src="./images/sponsors/logo-5.png"
+          onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';"
              alt="Sponsor 5"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
@@ -439,6 +443,7 @@
   </script>
 </body>
 </html>
+
 
 
 
