--- a/index.html
+++ b/index.html
@@ -350,14 +350,14 @@
 
       <a href="https://www.instagram.com/sponsor4" target="_blank" rel="noopener" class="group">
         <img src="./images/sponsors/logo-4.png"
-          onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';"
+          onerror="this.onerror=null;this.src='./images/logo.jpg?v=2';"
              alt="Sponsor 4"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
 
       <a href="https://www.instagram.com/sponsor5" target="_blank" rel="noopener" class="group">
         <img src="./images/sponsors/logo-5.png"
-          onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';"
+          onerror="this.onerror=null;this.src='./images/logo.jpg?v=2';"
              alt="Sponsor 5"
              class="h-12 sm:h-14 object-contain opacity-80 group-hover:opacity-100 transition" />
       </a>
@@ -368,15 +368,15 @@
       <div class="relative overflow-hidden">
         <div class="marquee flex items-center gap-16 p-2">
           <img src="./images/cuanity.png" onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="./images/whoimmal.png" onerror="this.onerror=null;this.src='./images/whoaimmal.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/whoimmal.png" onerror="this.onerror=null;this.src='./images/whoaimmal.jpg?v=2';" alt="Sponsor 1" class="h-7 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/galsp.png" onerror="this.onerror=null;this.src='./images/galsp.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
 
           <!-- duplikasi untuk loop mulus -->
           <img src="./images/cuanity.png" onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="./images/whoimmal.png" alt="Sponsor 2" class="h-7 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="./images/sponsors/logo-3.png" alt="Sponsor 3" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/whoimmal.png" onerror="this.onerror=null;this.src='./images/whoaimmal.jpg?v=2';" alt="Sponsor 1" class="h-7 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/galsp.png" onerror="this.onerror=null;this.src='./images/galsp.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
         </div>
@@ -443,3 +443,4 @@
   </script>
 </body>
 </html>
+
