--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="absolute inset-0 bg-black/30 backdrop-blur-md"></div>
         <div class="relative p-4">
           <div class="overflow-hidden rounded-xl">
-            <img src="./images/logo.png" alt="Accessories"
+            <img src="./images/logo_hd.png" alt="Accessories"
                  class="w-full h-48 object-cover scale-100 group-hover:scale-105 transition-transform duration-500">
           </div>
           <p class="mt-4 text-center font-medium text-gray-200">Accessories</p>
@@ -369,8 +369,8 @@
         <div class="marquee flex items-center gap-16 p-2">
           <img src="./images/cuanity.png" onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/whoimmal.png" onerror="this.onerror=null;this.src='./images/whoaimmal.jpg?v=2';" alt="Sponsor 1" class="h-7 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/itsgal.png" onerror="this.onerror=null;this.src='./images/itsgal.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/galsp.png" onerror="this.onerror=null;this.src='./images/galsp.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="./images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
 
           <!-- duplikasi untuk loop mulus -->
@@ -443,4 +443,5 @@
   </script>
 </body>
 </html>
+
 
