--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
           <!-- duplikasi untuk loop mulus -->
           <img src="./images/cuanity.png" onerror="this.onerror=null;this.src='./images/cuanity.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/whoimmal.png" onerror="this.onerror=null;this.src='./images/whoaimmal.jpg?v=2';" alt="Sponsor 1" class="h-7 object-contain opacity-60 hover:opacity-100 transition" />
+          <img src="./images/logo_hd.png" onerror="this.onerror=null;this.src='./images/logo_hd.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/galsp.png" onerror="this.onerror=null;this.src='./images/galsp.jpg?v=2';" alt="Sponsor 1" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
-          <img src="./images/sponsors/logo-4.png" alt="Sponsor 4" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
           <img src="./images/sponsors/logo-5.png" alt="Sponsor 5" class="h-12 object-contain opacity-60 hover:opacity-100 transition" />
         </div>
       </div>
@@ -443,6 +443,7 @@
   </script>
 </body>
 </html>
+
 
 
 
